--- a/css/index.css
+++ b/css/index.css
@@ -1,62 +1,48 @@
-/*html, body {
+html, body {
   margin: 0;
   padding: 0;
-  background: #f0f1ec;
+  background: #fefdf9;
+  font-family: sans-serif;
 }
 
-.logo {
+#logo {
   display: block;
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  max-height: 512px;
+  object-fit: contain;
+  border-bottom: 0.5em solid #b63b3a;
 }
 
-.gallery {
+#text {
+  padding: 2em;
+  background: #eee;
+  border-top: 0.5em solid #823835;
+  border-bottom: 0.5em solid #b63b3a;
+}
+
+section {
+  margin: 2em 0;
+}
+
+h4 {
+  color: #0c4367;
+}
+
+#gallery {
   display: flex;
+  flex-wrap: wrap;
+  padding: 1.5em;
+  background: #0c4367;
+  border-top: 0.5em solid #823835;
+  align-items: center;
+  justify-content: center;
 }
 
-.gallery img {
-  margin: 0;
+#gallery img {
+  width: 150px;
+  height: 200px;
+  margin: 0.5em;
+  padding: 1em;
+  background: #fefdf9;
+  object-fit: cover;
 }
-
-.gallery.narrow img {
-  width: calc(100vw/3);
-  aspect-ratio: 0.75;
-  margin: 0;
-}
-
-.gallery.wide img {
-  width: calc(100vw/2);
-  aspect-ratio: calc(4/3);
-  margin: 0;
-}
-
-@media (min-aspect-ratio: 0.5) {
-  .logo {
-    width: 50vh;
-    height: 50vh;
-    margin: 0 auto;
-  }
-}
-
-@media (min-aspect-ratio: 1.0) {
-  .logo {
-    width: 50vh;
-    height: 50vh;
-    float: left;
-  }
-
-  .gallery {
-    clear: both;
-  }
-}
-
-@media (min-aspect-ratio: 1.5) {
-  .logo {
-    width: 100vh;
-    height: 100vh;
-  }
-
-  .gallery {
-    clear: none;
-  }
-}*/
