Forgot viewport meta tag :(

--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ main {
 
 #text {
   grid-area: text;
-  padding: 32px;
+  padding: 16px;
   background: #eee;
   border-top: 4px solid #823835;
   border-bottom: 4px solid #b63b3a;
@@ -60,7 +60,7 @@ h4 {
   grid-area: gallery;
   display: flex;
   flex-wrap: wrap;
-  padding: 24px;
+  padding: 8px;
   background: #0c4367;
   border-top: 4px solid #823835;
   align-items: center;
@@ -68,10 +68,14 @@ h4 {
 }
 
 #gallery img {
-  width: 150px;
-  height: 200px;
+  width: 10vw;
+  height: 15vw;
+  min-width: 75px;
+  min-height: 100px;
+  max-width: 150px;
+  max-height: 200px;
   margin: 8px;
-  border: 1em solid #fefdf9;
+  border: 8px solid #fefdf9;
   object-fit: cover;
 }
 
@@ -96,8 +100,8 @@ h4 {
   }
 
   #text {
-    width: calc(50vw - 64px);
-    max-width: 448px;
+    width: calc(50vw - 32px);
+    max-width: 480px;
     background: #fefdf9;
     border-top: none;
   }
