--- a/css/index.css
+++ b/css/index.css
@@ -7,14 +7,17 @@ html, body {
 
 main {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-areas:
     "logo"
     "text"
-    "gallery";
+    "gallery"
+    "info1"
+    "faq1"
+    "info2"
+    "faq2";
   grid-template-rows: auto auto 1fr;
-  background: #0c4367;
 }
 
 #logo {
@@ -49,7 +52,7 @@ main {
   margin-bottom: 0;
 }
 
-h4 {
+h1, h2, h3, h4, h5, h6 {
   color: #0c4367;
 }
 
@@ -64,6 +67,7 @@ h4 {
   padding: 8px;
   background: #0c4367;
   border-top: 4px solid #823835;
+  border-bottom: 4px solid #b63b3a;
   align-items: center;
   justify-content: center;
 }
@@ -80,13 +84,50 @@ h4 {
   object-fit: cover;
 }
 
+#info1, #info2 {
+  padding: 0 16px;
+  background: #eee;
+  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+}
+
+#info1 {
+  grid-area: info1;
+  padding-top: 16px;
+  border-top: 4px solid #823835;
+}
+
+#info2 {
+  grid-area: info2;
+}
+
+#faq1, #faq2 {
+  padding: 0 16px;
+  background: #eee;
+  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+}
+
+#faq1 {
+  grid-area: faq1;
+}
+
+#faq2 {
+  grid-area: faq2;
+}
+
+dd {
+  margin-left: 1em;
+  padding: 1em 0;
+}
+
 @media (min-width: 1024px) or (min-aspect-ratio: 1) {
   main {
     max-width: 1024px;
     margin: 0 auto;
     grid-template-areas:
       "logo    text"
-      "gallery gallery";
+      "gallery gallery"
+      "info1   info2"
+      "faq1    faq2";
     grid-template-columns: 1fr 1fr;
   }
 
@@ -105,5 +146,27 @@ h4 {
     max-width: 480px;
     background: #fefdf9;
     border-top: none;
+  }
+
+  #info1, #info2, #faq1, #faq2 {
+    background: #fefdf9;
+  }
+
+  #info1 {
+    padding-right: 8px;
+  }
+
+  #info2 {
+    border-top: 4px solid #823835;
+    padding-top: 16px;
+    padding-left: 8px;
+  }
+
+  #faq1 h4, #faq2 h4 {
+    font-size: larger;
+  }
+
+  #faq2 h4 {
+    visibility: hidden;
   }
 }
